src/main/java/com/example/rsupporttest/error/CoreErrorCode.java
package com.example.rsupporttest.error;

public interface CoreErrorCode {
    String name();
}
